discussion/kv_engine/157877/157877_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Move to event-driven checkpoint removal task

Separates routine removal of unreffed checkpoints from "emergency"
memory recovery methods like cursor dropping and expelling.

Now, once a checkpoint becomes unreferenced, the checkpoint removal
task can be notified. The task tracks vbs to visit in a VBReadyQueue,
so does not need to scan every vb each run.

Change-Id: Ibf12fe5ca11ffd4daf9fcd2de3ae9e7010256e61

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-07-26 15:09:19.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-26 15:26:48.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38037/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\evp_store_test.cc(26): fatal error C1083: Cannot open include file: "checkpoint_remover.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38037/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10830/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:23:10: error: "checkpoint_remover.h" file not found [clang-diagnostic-error]
#include "checkpoint_remover.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10830/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:23:10:
error: "checkpoint_remover.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10830/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/449/ : FAILURE

Compile error at [2021-07-26T15:17:18.851Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: "checkpoint_remover.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/449/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12420/ : FAILURE

Compile error at [2021-07-26T15:22:00.977Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: checkpoint_remover.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12420/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12597/ : FAILURE

Compile error at [2021-07-26T15:18:42.677Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: checkpoint_remover.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12597/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12947/ : FAILURE

Compile error at [2021-07-26T15:21:11.861Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: "checkpoint_remover.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12947/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11523/ : FAILURE

Compile error at [2021-07-26T15:13:55.170Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: "checkpoint_remover.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11523/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20498/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/421/ : FAILURE

Compile error at [2021-07-26T15:17:57.155Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: checkpoint_remover.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/421/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9491/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32427/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
